Adds Match Status and API to update to RUNNING
